Widget: Change translation to use own dictionary
When using systemDic the adapters translations are sometimes overwritten by other adapters.

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -43,7 +43,7 @@
     "statesCount": "Anzahl geschaltener States",
     "string": "Zeichenkette",
     "switchedType": "Geschaltener Datentyp",
-    "switchedValue": "Geschalteter Wert",
+    "switchedValue": "Geschaltener Wert",
     "time-switch adapter settings": "Adaptereinstellungen für time-switch",
     "trigger": "Auslöser",
     "trigger count": "Anzahl Auslöser",
