Widget: Add new translations for astro trigger

--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -7,6 +7,8 @@
     "Thursday": "Jeudi",
     "Tuesday": "Mardi",
     "Wednesday": "Mercredi",
+    "addAstroTrigger": "Déclenchement astro",
+    "addTimeTrigger": "Déclencheur temporel",
     "addTrigger": "Ajouter un déclencheur",
     "allOff": "Tout éteint",
     "allOn": "Tout sur",
@@ -19,6 +21,8 @@
     "editTrigger": "Modifier le déclencheur",
     "enabled": "Activée",
     "false": "faux",
+    "inputAstroTime": "Heure Astro:",
+    "inputShiftInMinutes": "Décalage en minutes:",
     "manualSwitching": "Commutation manuelle",
     "name": "Nom",
     "needToEnterValidNumberOff": "Entrez un nombre valide pour la valeur désactivée lorsque le type est un nombre!",
@@ -39,9 +43,12 @@
     "scheduleId": "Planifier l'identifiant des données",
     "showId": "Afficher l'ID de l'état commuté",
     "showManualSwitch": "Afficher le commutateur manuel",
+    "solarNoon": "Le midi",
     "stateId": "Identifiant d'état commuté",
     "statesCount": "Nombre d'états commutés",
     "string": "chaîne",
+    "sunrise": "lever du soleil",
+    "sunset": "Le coucher du soleil",
     "switchedType": "Type commuté",
     "switchedValue": "Valeur commutée",
     "time-switch adapter settings": "Paramètres d'adaptateur pour time-switch",
