--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -7,6 +7,8 @@
     "Thursday": "donderdag",
     "Tuesday": "dinsdag",
     "Wednesday": "woensdag",
+    "addAstroTrigger": "Astro-trigger",
+    "addTimeTrigger": "Tijd trigger",
     "addTrigger": "Trigger toevoegen",
     "allOff": "Allemaal uit",
     "allOn": "Allemaal aan",
@@ -19,6 +21,8 @@
     "editTrigger": "Trigger bewerken",
     "enabled": "Ingeschakeld",
     "false": "false",
+    "inputAstroTime": "Astrotijd:",
+    "inputShiftInMinutes": "Verschuiving in minuten:",
     "manualSwitching": "Handmatig schakelen",
     "name": "Naam",
     "needToEnterValidNumberOff": "Voer een geldig nummer in voor uitgeschakelde waarde als type nummer is!",
@@ -39,9 +43,12 @@
     "scheduleId": "Plan gegevens-ID",
     "showId": "Toon geschakelde status-ID",
     "showManualSwitch": "Handmatige schakelaar weergeven",
+    "solarNoon": "Middag",
     "stateId": "Geschakelde status-ID",
     "statesCount": "Telling van geschakelde staten",
     "string": "draad",
+    "sunrise": "zonsopkomst",
+    "sunset": "Zonsondergang",
     "switchedType": "Geschakeld type",
     "switchedValue": "Geschakelde waarde",
     "time-switch adapter settings": "Adapterinstellingen voor time-switch",
