--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -7,6 +7,8 @@
     "Thursday": "czwartek",
     "Tuesday": "wtorek",
     "Wednesday": "środa",
+    "addAstroTrigger": "Spust Astro",
+    "addTimeTrigger": "Wyzwalacz czasowy",
     "addTrigger": "Dodaj wyzwalacz",
     "allOff": "Wszystko wyłączone",
     "allOn": "Wszystko włączone",
@@ -19,6 +21,8 @@
     "editTrigger": "Edytuj wyzwalacz",
     "enabled": "Włączone",
     "false": "fałszywe",
+    "inputAstroTime": "Czas Astro:",
+    "inputShiftInMinutes": "Zmiana w minutach:",
     "manualSwitching": "Przełączanie ręczne",
     "name": "Imię",
     "needToEnterValidNumberOff": "Wprowadź poprawny numer wyłączonej wartości, gdy typ jest liczbą!",
@@ -39,9 +43,12 @@
     "scheduleId": "Zaplanuj identyfikator danych",
     "showId": "Pokaż identyfikator stanu przełączonego",
     "showManualSwitch": "Pokaż przełącznik ręczny",
+    "solarNoon": "Południe",
     "stateId": "Identyfikator stanu przełączonego",
     "statesCount": "Liczba przełączanych stanów",
     "string": "strunowy",
+    "sunrise": "wschód słońca",
+    "sunset": "Zachód słońca",
     "switchedType": "Typ przełączany",
     "switchedValue": "Wartość przełączana",
     "time-switch adapter settings": "Ustawienia adaptera dla time-switch",
