--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -7,6 +7,8 @@
     "Thursday": "Quinta-feira",
     "Tuesday": "terça",
     "Wednesday": "Quarta-feira",
+    "addAstroTrigger": "Astro trigger",
+    "addTimeTrigger": "Gatilho de tempo",
     "addTrigger": "Adicionar gatilho",
     "allOff": "Tudo desligado",
     "allOn": "Tudo em cima",
@@ -19,6 +21,8 @@
     "editTrigger": "Editar gatilho",
     "enabled": "ativado",
     "false": "falso",
+    "inputAstroTime": "Tempo Astro:",
+    "inputShiftInMinutes": "Mudança em minutos:",
     "manualSwitching": "Comutação manual",
     "name": "Nome",
     "needToEnterValidNumberOff": "Digite um número válido para o valor desativado quando o tipo for número!",
@@ -39,9 +43,12 @@
     "scheduleId": "ID de dados da programação",
     "showId": "Mostrar ID do estado comutado",
     "showManualSwitch": "Mostrar interruptor manual",
+    "solarNoon": "Meio-dia",
     "stateId": "ID do estado comutado",
     "statesCount": "Contagem de estados comutados",
     "string": "corda",
+    "sunrise": "Nascer do sol",
+    "sunset": "Pôr do sol",
     "switchedType": "Tipo comutado",
     "switchedValue": "Valor comutado",
     "time-switch adapter settings": "Configurações do adaptador para time-switch",
