--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -7,6 +7,8 @@
     "Thursday": "Четверг",
     "Tuesday": "вторник",
     "Wednesday": "среда",
+    "addAstroTrigger": "Астро триггер",
+    "addTimeTrigger": "Время запуска",
     "addTrigger": "Добавить триггер",
     "allOff": "Все выключить",
     "allOn": "Все на",
@@ -19,6 +21,8 @@
     "editTrigger": "Редактировать триггер",
     "enabled": "Включено",
     "false": "ложный",
+    "inputAstroTime": "Астро время:",
+    "inputShiftInMinutes": "Сдвиг в минутах:",
     "manualSwitching": "Ручное переключение",
     "name": "имя",
     "needToEnterValidNumberOff": "Введите действительное число для выключенного значения, когда тип является числом!",
@@ -39,9 +43,12 @@
     "scheduleId": "Расписание данных ID",
     "showId": "Показать идентификатор переключенного состояния",
     "showManualSwitch": "Показать ручной переключатель",
+    "solarNoon": "Полдень",
     "stateId": "Идентификатор переключенного состояния",
     "statesCount": "Количество переключенных состояний",
     "string": "строка",
+    "sunrise": "Восход",
+    "sunset": "Закат солнца",
     "switchedType": "Коммутируемый тип",
     "switchedValue": "Переключаемое значение",
     "time-switch adapter settings": "Настройки адаптера для time-switch",
