--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -7,6 +7,8 @@
     "Thursday": "星期四",
     "Tuesday": "星期二",
     "Wednesday": "星期三",
+    "addAstroTrigger": "天文触发器",
+    "addTimeTrigger": "时间触发",
     "addTrigger": "添加触发器",
     "allOff": "全部关闭",
     "allOn": "所有",
@@ -19,6 +21,8 @@
     "editTrigger": "编辑触发器",
     "enabled": "已启用",
     "false": "假",
+    "inputAstroTime": "太空时间：",
+    "inputShiftInMinutes": "上班时间：",
     "manualSwitching": "手动切换",
     "name": "名称",
     "needToEnterValidNumberOff": "输入数字时，输入一个有效的数字作为关闭值！",
@@ -39,9 +43,12 @@
     "scheduleId": "时间表资料编号",
     "showId": "显示切换状态ID",
     "showManualSwitch": "显示手动开关",
+    "solarNoon": "中午",
     "stateId": "切换状态编号",
     "statesCount": "切换状态计数",
     "string": "串",
+    "sunrise": "日出",
+    "sunset": "日落",
     "switchedType": "切换式",
     "switchedValue": "切换值",
     "time-switch adapter settings": "time-switch的适配器设置",
