Widget: Add option to use astro icons instead of text

--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -55,5 +55,6 @@
     "trigger": "Trigger",
     "trigger count": "Trigger count",
     "true": "true",
+    "useAstroIcons": "Use astro icons",
     "valueType": "Value type"
 }
