--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -55,5 +55,6 @@
     "trigger": "grilletto",
     "trigger count": "Conteggio dei trigger",
     "true": "vero",
+    "useAstroIcons": "Usa le icone astro",
     "valueType": "Tipo di valore"
 }
