--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -55,5 +55,6 @@
     "trigger": "In gang zetten",
     "trigger count": "Aantal triggers",
     "true": "waar",
+    "useAstroIcons": "Gebruik astropictogrammen",
     "valueType": "Waarde type"
 }
