--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -55,5 +55,6 @@
     "trigger": "Desencadear",
     "trigger count": "Contagem de gatilhos",
     "true": "verdade",
+    "useAstroIcons": "Use ícones astro",
     "valueType": "Tipo de valor"
 }
