--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -55,5 +55,6 @@
     "trigger": "Вызывать",
     "trigger count": "Количество триггеров",
     "true": "правда",
+    "useAstroIcons": "Используйте значки Astro",
     "valueType": "Тип ценности"
 }
