--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -55,5 +55,6 @@
     "trigger": "触发",
     "trigger count": "触发计数",
     "true": "真正",
+    "useAstroIcons": "使用astro图标",
     "valueType": "值类型"
 }
