--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -55,5 +55,6 @@
     "trigger": "Auslöser",
     "trigger count": "Anzahl Auslöser",
     "true": "ja",
+    "useAstroIcons": "Astro Icons verwenden",
     "valueType": "Werttyp"
 }
