--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -55,5 +55,6 @@
     "trigger": "Desencadenar",
     "trigger count": "Recuento de disparadores",
     "true": "cierto",
+    "useAstroIcons": "Usar íconos astro",
     "valueType": "Tipo de valor"
 }
