--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -55,5 +55,6 @@
     "trigger": "Déclencheur",
     "trigger count": "Nombre de déclencheurs",
     "true": "vrai",
+    "useAstroIcons": "Utiliser des icônes astro",
     "valueType": "Type de valeur"
 }
