--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -55,5 +55,6 @@
     "trigger": "Wyzwalacz",
     "trigger count": "Liczba wyzwalaczy",
     "true": "prawdziwe",
+    "useAstroIcons": "Użyj ikon astro",
     "valueType": "Typ wartości"
 }
