--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -8,6 +8,7 @@
     "Tuesday": "Mardi",
     "Wednesday": "Mercredi",
     "addAstroTrigger": "Déclenchement astro",
+    "addCondition": "Ajouter une condition",
     "addTimeTrigger": "Déclencheur temporel",
     "addTrigger": "Ajouter un déclencheur",
     "allOff": "Tout éteint",
@@ -15,11 +16,14 @@
     "automaticSwitchingEnabled": "Commutation automatique activée",
     "boolean": "booléen",
     "cancelEdit": "Annuler la modification",
+    "condition": "État",
     "currentValue": "Valeur actuelle",
     "dataId": "Planifier l'identifiant des données",
     "editName": "Modifier le nom",
     "editTrigger": "Modifier le déclencheur",
     "enabled": "Activée",
+    "equals": "Équivaut à",
+    "equalsNot": "Égale non",
     "false": "faux",
     "inputAstroTime": "Heure Astro:",
     "inputShiftInMinutes": "Décalage en minutes:",
@@ -36,6 +40,7 @@
     "offValue": "Valeur pour off",
     "on": "Sur",
     "onValue": "Valeur pour on",
+    "removeCondition": "Supprimer la condition",
     "removeSchedule": "Supprimer le calendrier",
     "removeTrigger": "Supprimer la gâchette",
     "saveChanges": "Sauvegarder les modifications",
@@ -56,5 +61,6 @@
     "trigger count": "Nombre de déclencheurs",
     "true": "vrai",
     "useAstroIcons": "Utiliser des icônes astro",
-    "valueType": "Type de valeur"
+    "valueType": "Type de valeur",
+    "withConstant": "Avec constante"
 }
