--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -8,6 +8,7 @@
     "Tuesday": "terça",
     "Wednesday": "Quarta-feira",
     "addAstroTrigger": "Astro trigger",
+    "addCondition": "Adicionar condição",
     "addTimeTrigger": "Gatilho de tempo",
     "addTrigger": "Adicionar gatilho",
     "allOff": "Tudo desligado",
@@ -15,11 +16,14 @@
     "automaticSwitchingEnabled": "Comutação automática ativada",
     "boolean": "boleano",
     "cancelEdit": "Cancelar edição",
+    "condition": "Doença",
     "currentValue": "Valor atual",
     "dataId": "ID de dados da programação",
     "editName": "Editar nome",
     "editTrigger": "Editar gatilho",
     "enabled": "ativado",
+    "equals": "É igual a",
+    "equalsNot": "Não é igual",
     "false": "falso",
     "inputAstroTime": "Tempo Astro:",
     "inputShiftInMinutes": "Mudança em minutos:",
@@ -36,6 +40,7 @@
     "offValue": "Valor para off",
     "on": "Em",
     "onValue": "Valor para on",
+    "removeCondition": "Remover condição",
     "removeSchedule": "Remover agendamento",
     "removeTrigger": "Remover gatilho",
     "saveChanges": "Salvar alterações",
@@ -56,5 +61,6 @@
     "trigger count": "Contagem de gatilhos",
     "true": "verdade",
     "useAstroIcons": "Use ícones astro",
-    "valueType": "Tipo de valor"
+    "valueType": "Tipo de valor",
+    "withConstant": "Com constante"
 }
