--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -8,6 +8,7 @@
     "Tuesday": "вторник",
     "Wednesday": "среда",
     "addAstroTrigger": "Астро триггер",
+    "addCondition": "Добавить условие",
     "addTimeTrigger": "Время запуска",
     "addTrigger": "Добавить триггер",
     "allOff": "Все выключить",
@@ -15,11 +16,14 @@
     "automaticSwitchingEnabled": "Автоматическое переключение включено",
     "boolean": "логический",
     "cancelEdit": "Отменить редактирование",
+    "condition": "Состояние",
     "currentValue": "Текущая стоимость",
     "dataId": "Расписание данных ID",
     "editName": "Редактировать название",
     "editTrigger": "Редактировать триггер",
     "enabled": "Включено",
+    "equals": "Равно",
+    "equalsNot": "Равно не",
     "false": "ложный",
     "inputAstroTime": "Астро время:",
     "inputShiftInMinutes": "Сдвиг в минутах:",
@@ -36,6 +40,7 @@
     "offValue": "Значение для выкл",
     "on": "На",
     "onValue": "Значение для на",
+    "removeCondition": "Удалить условие",
     "removeSchedule": "Удалить расписание",
     "removeTrigger": "Удалить триггер",
     "saveChanges": "Сохранить изменения",
@@ -56,5 +61,6 @@
     "trigger count": "Количество триггеров",
     "true": "правда",
     "useAstroIcons": "Используйте значки Astro",
-    "valueType": "Тип ценности"
+    "valueType": "Тип ценности",
+    "withConstant": "С постоянным"
 }
