Add translations for conditions in VIS Edit

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -17,6 +17,9 @@
     "boolean": "Wahrheitswert",
     "cancelEdit": "Bearbeiten abbrechen",
     "condition": "Bedingung",
+    "conditionStateAlias": "Bedingung State Alias",
+    "conditionStateId": "Bedingung State Id",
+    "conditionStatesCount": "Anzahl State für Bedingungen",
     "currentValue": "Aktueller Wert",
     "dataId": "Id für Schaltplandaten",
     "editName": "Namen bearbeiten",
@@ -46,6 +49,7 @@
     "saveChanges": "Änderungen speichern",
     "saveName": "Name speichern",
     "scheduleId": "Schaltplandaten Id",
+    "showConditionIds": "Anzeigen von Bedingungs State Ids",
     "showId": "Anzeigen des geschaltenen States",
     "showManualSwitch": "Anzeigen der manuellen Schalter",
     "solarNoon": "Mittag",
