--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -17,6 +17,9 @@
     "boolean": "boolean",
     "cancelEdit": "Cancel edit",
     "condition": "Condition",
+    "conditionStateAlias": "Condition state alias",
+    "conditionStateId": "Condition state id",
+    "conditionStatesCount": "Count of condition states",
     "currentValue": "Current value",
     "dataId": "Schedule data id",
     "editName": "Edit name",
@@ -46,6 +49,7 @@
     "saveChanges": "Save changes",
     "saveName": "Save name",
     "scheduleId": "Schedule data id",
+    "showConditionIds": "Show condition state ids",
     "showId": "Show switched state id",
     "showManualSwitch": "Show manual switch",
     "solarNoon": "Noon",
