--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -17,6 +17,9 @@
     "boolean": "booleano",
     "cancelEdit": "Cancelar edición",
     "condition": "Condición",
+    "conditionStateAlias": "Alias ​​de estado de condición",
+    "conditionStateId": "Id. De estado de condición",
+    "conditionStatesCount": "Recuento de estados de condición",
     "currentValue": "Valor actual",
     "dataId": "Programar ID de datos",
     "editName": "Editar nombre",
@@ -46,6 +49,7 @@
     "saveChanges": "Guardar cambios",
     "saveName": "Guardar nombre",
     "scheduleId": "Programar ID de datos",
+    "showConditionIds": "Mostrar ID de estado de condición",
     "showId": "Mostrar ID de estado cambiado",
     "showManualSwitch": "Mostrar interruptor manual",
     "solarNoon": "Mediodía",
