--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -17,6 +17,9 @@
     "boolean": "booléen",
     "cancelEdit": "Annuler la modification",
     "condition": "État",
+    "conditionStateAlias": "Alias ​​d'état de condition",
+    "conditionStateId": "ID de l'état de la condition",
+    "conditionStatesCount": "Nombre d'états de condition",
     "currentValue": "Valeur actuelle",
     "dataId": "Planifier l'identifiant des données",
     "editName": "Modifier le nom",
@@ -46,6 +49,7 @@
     "saveChanges": "Sauvegarder les modifications",
     "saveName": "Enregistrer le nom",
     "scheduleId": "Planifier l'identifiant des données",
+    "showConditionIds": "Afficher les identifiants d'état des conditions",
     "showId": "Afficher l'ID de l'état commuté",
     "showManualSwitch": "Afficher le commutateur manuel",
     "solarNoon": "Le midi",
