--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -17,6 +17,9 @@
     "boolean": "booleano",
     "cancelEdit": "Annulla modifica",
     "condition": "Condizione",
+    "conditionStateAlias": "Alias ​​di stato della condizione",
+    "conditionStateId": "ID stato condizione",
+    "conditionStatesCount": "Conteggio degli stati di condizione",
     "currentValue": "Valore corrente",
     "dataId": "Pianifica ID dati",
     "editName": "Modifica nome",
@@ -46,6 +49,7 @@
     "saveChanges": "Salvare le modifiche",
     "saveName": "Salva nome",
     "scheduleId": "Pianifica ID dati",
+    "showConditionIds": "Mostra gli ID di stato della condizione",
     "showId": "Mostra ID stato commutato",
     "showManualSwitch": "Mostra interruttore manuale",
     "solarNoon": "Mezzogiorno",
