--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -17,6 +17,9 @@
     "boolean": "boolean",
     "cancelEdit": "Bewerken annuleren",
     "condition": "Staat",
+    "conditionStateAlias": "Staat alias",
+    "conditionStateId": "Conditie staat id",
+    "conditionStatesCount": "Aantal condities",
     "currentValue": "Huidige waarde",
     "dataId": "Plan gegevens-ID",
     "editName": "Naam bewerken",
@@ -46,6 +49,7 @@
     "saveChanges": "Wijzigingen opslaan",
     "saveName": "Naam opslaan",
     "scheduleId": "Plan gegevens-ID",
+    "showConditionIds": "Staats-ID's weergeven",
     "showId": "Toon geschakelde status-ID",
     "showManualSwitch": "Handmatige schakelaar weergeven",
     "solarNoon": "Middag",
