--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -17,6 +17,9 @@
     "boolean": "boolean",
     "cancelEdit": "Anuluj edycję",
     "condition": "Stan: schorzenie",
+    "conditionStateAlias": "Alias ​​stanu warunku",
+    "conditionStateId": "Identyfikator stanu warunku",
+    "conditionStatesCount": "Liczba stanów warunkowych",
     "currentValue": "Aktualna wartość",
     "dataId": "Zaplanuj identyfikator danych",
     "editName": "Zmień imię",
@@ -46,6 +49,7 @@
     "saveChanges": "Zapisz zmiany",
     "saveName": "Zapisz imię",
     "scheduleId": "Zaplanuj identyfikator danych",
+    "showConditionIds": "Pokaż identyfikatory stanów warunków",
     "showId": "Pokaż identyfikator stanu przełączonego",
     "showManualSwitch": "Pokaż przełącznik ręczny",
     "solarNoon": "Południe",
