--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -17,6 +17,9 @@
     "boolean": "boleano",
     "cancelEdit": "Cancelar edição",
     "condition": "Doença",
+    "conditionStateAlias": "Alias ​​de estado de condição",
+    "conditionStateId": "ID de estado de condição",
+    "conditionStatesCount": "Contagem de estados de condição",
     "currentValue": "Valor atual",
     "dataId": "ID de dados da programação",
     "editName": "Editar nome",
@@ -46,6 +49,7 @@
     "saveChanges": "Salvar alterações",
     "saveName": "Salvar nome",
     "scheduleId": "ID de dados da programação",
+    "showConditionIds": "Mostrar ids de estado de condição",
     "showId": "Mostrar ID do estado comutado",
     "showManualSwitch": "Mostrar interruptor manual",
     "solarNoon": "Meio-dia",
