--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -17,6 +17,9 @@
     "boolean": "логический",
     "cancelEdit": "Отменить редактирование",
     "condition": "Состояние",
+    "conditionStateAlias": "Псевдоним состояния состояния",
+    "conditionStateId": "Идентификатор состояния состояния",
+    "conditionStatesCount": "Количество состояний состояния",
     "currentValue": "Текущая стоимость",
     "dataId": "Расписание данных ID",
     "editName": "Редактировать название",
@@ -46,6 +49,7 @@
     "saveChanges": "Сохранить изменения",
     "saveName": "Сохранить имя",
     "scheduleId": "Расписание данных ID",
+    "showConditionIds": "Показать идентификаторы состояния условия",
     "showId": "Показать идентификатор переключенного состояния",
     "showManualSwitch": "Показать ручной переключатель",
     "solarNoon": "Полдень",
