--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -17,6 +17,9 @@
     "boolean": "布尔值",
     "cancelEdit": "取消编辑",
     "condition": "健康）状况",
+    "conditionStateAlias": "条件状态别名",
+    "conditionStateId": "条件状态编号",
+    "conditionStatesCount": "条件状态计数",
     "currentValue": "当前值",
     "dataId": "时间表资料编号",
     "editName": "编辑名称",
@@ -46,6 +49,7 @@
     "saveChanges": "保存更改",
     "saveName": "保存名字",
     "scheduleId": "时间表资料编号",
+    "showConditionIds": "显示条件状态ID",
     "showId": "显示切换状态ID",
     "showManualSwitch": "显示手动开关",
     "solarNoon": "中午",
