OneTimeTrigger: Add gui in widget, fix deletion and add message to add new one time triggers

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -7,9 +7,10 @@
     "Thursday": "Donnerstag",
     "Tuesday": "Dienstag",
     "Wednesday": "Mittwoch",
-    "addAstroTrigger": "Astro Trigger",
+    "addAstroTrigger": "Astrotrigger",
     "addCondition": "Bedingung hinzufügen",
-    "addTimeTrigger": "Time trigger",
+    "addOneTimeTrigger": "Einmaltrigger",
+    "addTimeTrigger": "Zeittrigger",
     "addTrigger": "Auslöser hinzufügen",
     "allOff": "Alle aus",
     "allOn": "Alle an",
@@ -43,6 +44,7 @@
     "offValue": "Wert für aus",
     "on": "an",
     "onValue": "Wert für an",
+    "oneTimeTriggerInfo": "Einmal auslösen in hh:mm:ss:",
     "removeCondition": "Bedingung entfernen",
     "removeSchedule": "Zeitplan entfernen",
     "removeTrigger": "Auslöser entfernen",
