--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "Wednesday",
     "addAstroTrigger": "Astro trigger",
     "addCondition": "Add condition",
+    "addOneTimeTrigger": "One time trigger",
     "addTimeTrigger": "Time trigger",
     "addTrigger": "Add trigger",
     "allOff": "All off",
@@ -43,6 +44,7 @@
     "offValue": "Value for off",
     "on": "On",
     "onValue": "Value for on",
+    "oneTimeTriggerInfo": "Trigger once in hh:mm:ss:",
     "removeCondition": "Remove condition",
     "removeSchedule": "Remove schedule",
     "removeTrigger": "Remove trigger",
