--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "miércoles",
     "addAstroTrigger": "Astro gatillo",
     "addCondition": "Agregar condición",
+    "addOneTimeTrigger": "Disparador de una sola vez",
     "addTimeTrigger": "Disparador de tiempo",
     "addTrigger": "Agregar disparador",
     "allOff": "Todo apagado",
@@ -43,6 +44,7 @@
     "offValue": "Valor para apagado",
     "on": "En",
     "onValue": "Valor para en",
+    "oneTimeTriggerInfo": "Disparo una vez en h: mm: ss:",
     "removeCondition": "Eliminar condición",
     "removeSchedule": "Eliminar horario",
     "removeTrigger": "Eliminar gatillo",
