--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "Mercredi",
     "addAstroTrigger": "Déclenchement astro",
     "addCondition": "Ajouter une condition",
+    "addOneTimeTrigger": "Déclencheur unique",
     "addTimeTrigger": "Déclencheur temporel",
     "addTrigger": "Ajouter un déclencheur",
     "allOff": "Tout éteint",
@@ -43,6 +44,7 @@
     "offValue": "Valeur pour off",
     "on": "Sur",
     "onValue": "Valeur pour on",
+    "oneTimeTriggerInfo": "Déclenchement une fois en h:mm:ss :",
     "removeCondition": "Supprimer la condition",
     "removeSchedule": "Supprimer le calendrier",
     "removeTrigger": "Supprimer la gâchette",
