--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "mercoledì",
     "addAstroTrigger": "Astro trigger",
     "addCondition": "Aggiungi condizione",
+    "addOneTimeTrigger": "Innesco una tantum",
     "addTimeTrigger": "Innesco temporale",
     "addTrigger": "Aggiungi trigger",
     "allOff": "Tutto fuori",
@@ -43,6 +44,7 @@
     "offValue": "Valore per spento",
     "on": "Su",
     "onValue": "Valore per on",
+    "oneTimeTriggerInfo": "Attiva una volta in h:mm:ss:",
     "removeCondition": "Rimuovi condizione",
     "removeSchedule": "Rimuovi programma",
     "removeTrigger": "Rimuovi grilletto",
