--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "woensdag",
     "addAstroTrigger": "Astro-trigger",
     "addCondition": "Voorwaarde toevoegen",
+    "addOneTimeTrigger": "Eenmalige trigger",
     "addTimeTrigger": "Tijd trigger",
     "addTrigger": "Trigger toevoegen",
     "allOff": "Allemaal uit",
@@ -43,6 +44,7 @@
     "offValue": "Waarde voor uit",
     "on": "Aan",
     "onValue": "Waarde voor op",
+    "oneTimeTriggerInfo": "Activeer eenmaal in u:mm:ss:",
     "removeCondition": "Voorwaarde verwijderen",
     "removeSchedule": "Schema verwijderen",
     "removeTrigger": "Trigger verwijderen",
