--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "środa",
     "addAstroTrigger": "Spust Astro",
     "addCondition": "Dodaj warunek",
+    "addOneTimeTrigger": "Jednorazowy wyzwalacz",
     "addTimeTrigger": "Wyzwalacz czasowy",
     "addTrigger": "Dodaj wyzwalacz",
     "allOff": "Wszystko wyłączone",
@@ -43,6 +44,7 @@
     "offValue": "Wartość wyłączona",
     "on": "Na",
     "onValue": "Wartość dla włączenia",
+    "oneTimeTriggerInfo": "Aktywuj raz w h:mm:ss:",
     "removeCondition": "Usuń warunek",
     "removeSchedule": "Usuń harmonogram",
     "removeTrigger": "Usuń spust",
