--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "Quarta-feira",
     "addAstroTrigger": "Astro trigger",
     "addCondition": "Adicionar condição",
+    "addOneTimeTrigger": "Gatilho de uma só vez",
     "addTimeTrigger": "Gatilho de tempo",
     "addTrigger": "Adicionar gatilho",
     "allOff": "Tudo desligado",
@@ -43,6 +44,7 @@
     "offValue": "Valor para off",
     "on": "Em",
     "onValue": "Valor para on",
+    "oneTimeTriggerInfo": "Acione uma vez em h: mm: ss:",
     "removeCondition": "Remover condição",
     "removeSchedule": "Remover agendamento",
     "removeTrigger": "Remover gatilho",
