--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "среда",
     "addAstroTrigger": "Астро триггер",
     "addCondition": "Добавить условие",
+    "addOneTimeTrigger": "Одноразовый триггер",
     "addTimeTrigger": "Время запуска",
     "addTrigger": "Добавить триггер",
     "allOff": "Все выключить",
@@ -43,6 +44,7 @@
     "offValue": "Значение для выкл",
     "on": "На",
     "onValue": "Значение для на",
+    "oneTimeTriggerInfo": "Один раз запускать в ч: мм: сс:",
     "removeCondition": "Удалить условие",
     "removeSchedule": "Удалить расписание",
     "removeTrigger": "Удалить триггер",
