--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -9,6 +9,7 @@
     "Wednesday": "星期三",
     "addAstroTrigger": "天文触发器",
     "addCondition": "添加条件",
+    "addOneTimeTrigger": "一次触发",
     "addTimeTrigger": "时间触发",
     "addTrigger": "添加触发器",
     "allOff": "全部关闭",
@@ -43,6 +44,7 @@
     "offValue": "折价",
     "on": "上",
     "onValue": "的价值",
+    "oneTimeTriggerInfo": "在 h:mm:ss 触发一次：",
     "removeCondition": "删除条件",
     "removeSchedule": "删除时间表",
     "removeTrigger": "删除触发器",
