Update and rename admin/i18n/ru/translations.json to администратор/i18n/RU/translations.json
Поправил перевод ру

--- a/администратор/i18n/RU/translations.json
+++ b/администратор/i18n/RU/translations.json
@@ -12,7 +12,7 @@
     "addTimeTrigger": "Время запуска",
     "addTrigger": "Добавить триггер",
     "allOff": "Все выключить",
-    "allOn": "Все на",
+    "allOn": "Все ON",
     "automaticSwitchingEnabled": "Автоматическое переключение включено",
     "boolean": "логический",
     "cancelEdit": "Отменить редактирование",
@@ -20,14 +20,14 @@
     "conditionStateAlias": "Псевдоним состояния состояния",
     "conditionStateId": "Идентификатор состояния состояния",
     "conditionStatesCount": "Количество состояний состояния",
-    "currentValue": "Текущая стоимость",
+    "currentValue": "Текущее состояние",
     "dataId": "Расписание данных ID",
     "editName": "Редактировать название",
     "editTrigger": "Редактировать триггер",
     "enabled": "Включено",
     "equals": "Равно",
-    "equalsNot": "Равно не",
-    "false": "ложный",
+    "equalsNot": "не Равно",
+    "false": "ложь",
     "inputAstroTime": "Астро время:",
     "inputShiftInMinutes": "Сдвиг в минутах:",
     "manualSwitching": "Ручное переключение",
@@ -39,10 +39,10 @@
     "needToSelectStateId": "Выберите хотя бы один идентификатор переключенного состояния, чтобы использовать виджет!",
     "needToSelectValidDataId": "Выберите действительный идентификатор данных расписания (с шаблоном 'time-switch.0.onoff. *. Data')!",
     "number": "число",
-    "off": "от",
+    "off": "OFF",
     "offValue": "Значение для выкл",
-    "on": "На",
-    "onValue": "Значение для на",
+    "on": "ON",
+    "onValue": "Значение для вкл",
     "removeCondition": "Удалить условие",
     "removeSchedule": "Удалить расписание",
     "removeTrigger": "Удалить триггер",
